# ai-tracker

./: .gitignore  package-lock.json
Aspire Desktop/Aspire Desktop/: AppDelegate.swift  AppState.swift  Aspire_DesktopApp.swift  ContentView.swift  ScreenshotView.swift
Aspire Desktop/Aspire Desktop.xcodeproj/: project.pbxproj
Aspire Desktop/Aspire DesktopTests/: Aspire_DesktopTests.swift
Aspire Desktop/Aspire DesktopUITests/: Aspire_DesktopUITests.swift  Aspire_DesktopUITestsLaunchTests.swift
esp32/: camera.h  camera_pins.h  friend_glass.ino  main.ino  mic.cpp  readme.md
esp32/friend/: ble.cpp  ble.h  camera.cpp  mic.h  readme.md
esp32/surveyor/: BLETransmitter.cpp  BLETransmitter.h  Camera.h  SDCard.cpp  SDCard.h  WavRecorder.cpp  surveyor.ino
firmware/: .gitignore  main2.py
firmware/rp2040/hm01b0/: CMakeLists.txt
firmware/rp2040/hm01b0/examples/serial_terminal/: CMakeLists.txt  main.c
firmware/rp2040/hm01b0/src/: hm01b0.c
firmware/scripts/: main.py  main2.py
flutter/: pubspec.yaml
flutter/lib/: events.dart  main.dart  util.dart
flutter/linux/: CMakeLists.txt  my_application.cc
functions/: .gitignore  package-lock.json  package.json  tsconfig.json
functions/src/: index.ts  test.ts
hasura/heroku/: Dockerfile  README.md  app.json
hasura/local/: docker-compose.yml
hasura/state/: README.md
server/: .gitignore  README.md  package-lock.json  package.json  request_data.json  server.js  server.ts  serverjs.js
server/prompts/: v34
workstation/: adpcm.py  assembler.py  diarization.py  diarizer.py  socketServer.py  workstation.py
(+530 files in other folders)
